# rag-guardbench

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
artifacts/: case_outcomes.csv  failure_examples.json  run_manifest.json  run_traces.jsonl  summary.json
data/: cases.json  corpus.json
docs/: benchmark_report.html  benchmark_report.md
scripts/: generate_benchmark_data.py  run_benchmark.py
src/rag_guardbench/: cli.py  data_io.py  defenses.py  models.py  pipeline.py  reporting.py  retrieval.py  sample_data.py  schemas.py  tools.py
tests/: test_cli.py
